removed unncessary comments/files and changed package.json homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://codeNameScript.github.io/practice_robofriends",
+  "homepage": "https://codeNameScript.github.io/robofriends-api-exercise",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
